--- a/index.html
+++ b/index.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 6</title>
-    <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <div id="main"></div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>3D CITY</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <div id="main"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.js"></script>
 
-<script src="js/OrbitControls.js" type="module"></script>
+    <script src="js/OrbitControls.js" type="module"></script>
 
-<script src="js/factory.js" type="module"></script>
+    <script src="js/factory.js" type="module"></script>
 
-<script src="js/cube.js" type="module"></script>
+    <script src="js/cube.js" type="module"></script>
 
-<script src="js/addLights.js" type="module"></script>
-<script src="js/addRoads.js" type="module"></script>
-<script src="js/buildings.js" type="module"></script>
+    <script src="js/addLights.js" type="module"></script>
+    <script src="js/addRoads.js" type="module"></script>
+    <script src="js/buildings.js" type="module"></script>
 
-<script src="js/car.js" type="module"></script>
-<script src="js/skybox.js" type="module"></script>
-<script src="js/trees.js" type="module"></script>
-<script src="js/train.js" type="module"></script>
+    <script src="js/car.js" type="module"></script>
+    <script src="js/skybox.js" type="module"></script>
+    <script src="js/trees.js" type="module"></script>
+    <script src="js/train.js" type="module"></script>
 
-<script src="js/city_model1.js" type="module"></script>
-
-
-
-</body>
+    <script src="js/city_model1.js" type="module"></script>
+  </body>
 </html>
